# microtype

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
microtype-macro/: Cargo.toml
microtype-macro/src/: lib.rs  model.rs  parse.rs
microtype-macro/src/codegen/: diesel.rs  errors.rs  mod.rs  normal.rs  secret.rs  special_attrs.rs
microtype-macro/src/codegen/special_attrs/: diesel.rs  helpers.rs  int.rs  mod.rs  string.rs  type_annotation.rs
src/: lib.rs  microtype_macro.rs  secret_microtype.rs
tests/ui/fail/: duplicate_secret_attr.rs  duplicate_secret_attr.stderr  duplicate_string_attrs.rs  duplicate_string_attrs.stderr  incorrect_syntax.rs  incorrect_syntax.stderr  serialize_secret.rs  serialize_secret.stderr
tests/ui/fail/serde/: serialize_secret.rs  serialize_secret.stderr
tests/ui/pass/: format_impls.rs  into_impl.rs  no_import.rs  normal.rs  normal_with_attrs.rs  out_secret.rs  outrageous_naming.rs  secret.rs
tests/ui/pass/serde/: serialize_secret.rs
