[package]
name = "microtype"
version = "0.6.3"
edition = "2021"
repository = "https://github.com/cameron1024/microtype"
license = "MIT"
description = "A crate to simplify the creation of microtypes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microtype-core = "0.1.5"
microtype-macro = "0.1.5"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"

[features]
serde_impls = ["microtype-core/serde_support", "microtype-macro/serde_support"]
test_impls = ["microtype-macro/test_impls"]
default = ["serde_impls", "test_impls"]
