[package]
name = "microtype"
version = "0.7.4"
edition = "2021"
repository = "https://github.com/cameron1024/microtype"
license = "MIT"
description = "A crate to simplify the creation of microtypes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microtype-macro = { version = "0.2.4", path = "./microtype-macro" }
secrecy = { version = "0.8", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"

[features]
default = ["secret", "test_impls", "deref_impls"]

secret = ["secrecy", "microtype-macro/secret"]
serde = ["secrecy/serde", "microtype-macro/serde"]
test_impls = ["microtype-macro/test_impls"]
deref_impls = ["microtype-macro/deref_impls"]
